--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">carpool</string>
+    <string name="default_web_client_id">171429724804-08chg2e0kfe5vlosq0ov0c1vecsrvcf6.apps.googleusercontent.com</string>
 </resources>
